# cr3echrz

./: README.md  cr3  fix_all_ob3ect_py.py  fix_imports_v2.py  fix_numeric_class_names.py  gen_lean_scaffold.py  gen_py_template.py  gen_py_template_v2.py  generate_vault_files.py  pyproject.toml  regenerate_all_py.py
code/: unified_driver.py
lean/: GodelCompleteSentence.lean  GodelCompletion.lean
src/cr3echrz/: __init__.py  __main__.py  cli.py
src/cr3echrz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cr3echrz/ob3ect_vault/: __init__.py  cr3  diagnostics.py  integrators.py  main.py  state.py  transforms.py
src/cr3echrz/p3theorem/: __init__.py  cr3  diagnostics.py  integrators.py  main.py  state.py  transforms.py
src/cr3echrz/p4rakernel/: __init__.py
src/cr3echrz/p4rakernel/burnside/: __init__.py  main.py  opcodes.py  rewriting.py  state.py
src/cr3echrz/p4rakernel/connes/: __init__.py  main.py  opcodes.py  state.py
src/cr3echrz/p4rakernel/erdos_straus/: __init__.py  main.py  opcodes.py  state.py
src/cr3echrz/p4rakernel/goldbach/: __init__.py  main.py  opcodes.py  state.py
src/cr3echrz/p4rakernel/landau/: __init__.py  main.py  opcodes.py  state.py
src/cr3echrz/p4rakernel/threebody/: __init__.py  diagnostics.py  integrators.py  main.py  state.py  transforms.py
src/cr3echrz/shared/: __init__.py  belnap.py  domains.py  frobenius.py  opcodes.py
